--- a/SlidebarMenu/Base.lproj/Main.storyboard
+++ b/SlidebarMenu/Base.lproj/Main.storyboard
@@ -7,10 +7,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Reveal View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="SWRevealViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -20,10 +20,15 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
+                    <connections>
+                        <segue destination="qVr-E3-Up8" kind="custom" identifier="sw_rear" customClass="SWRevealViewControllerSegueSetController" id="vNq-Lf-MCY"/>
+                        <segue destination="NHv-9d-u2x" kind="custom" identifier="sw_front" customClass="SWRevealViewControllerSegueSetController" id="nzz-0R-q5L"/>
+                        <segue destination="hNy-Na-6Ir" kind="custom" identifier="sw_right" customClass="SWRevealViewControllerSegueSetController" id="g00-Sl-Ltx"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137" y="37"/>
+            <point key="canvasLocation" x="-254" y="36"/>
         </scene>
         <!--Menu Controller-->
         <scene sceneID="UhJ-K9-TLE">
@@ -85,6 +90,9 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="0.92549019610000005" green="0.94117647059999998" blue="0.94509803920000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <connections>
+                                            <segue destination="NHv-9d-u2x" kind="custom" customClass="SWRevealViewControllerSeguePushController" id="4Mw-tr-7fV"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="e1o-wv-QJo">
                                         <rect key="frame" x="0.0" y="88" width="375" height="44"/>
@@ -113,6 +121,9 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="0.92549019610000005" green="0.94117647059999998" blue="0.94509803920000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <connections>
+                                            <segue destination="qtf-eg-eV0" kind="custom" customClass="SWRevealViewControllerSeguePushController" id="jUP-6p-8VP"/>
+                                        </connections>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="AvX-Az-w2v">
                                         <rect key="frame" x="0.0" y="132" width="375" height="44"/>
@@ -135,6 +146,9 @@
                                             </subviews>
                                         </tableViewCellContentView>
                                         <color key="backgroundColor" red="0.92549019610000005" green="0.94117647059999998" blue="0.94509803920000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <connections>
+                                            <segue destination="v2S-ee-URu" kind="custom" customClass="SWRevealViewControllerSeguePushController" id="oAL-xf-Wx0"/>
+                                        </connections>
                                     </tableViewCell>
                                 </cells>
                             </tableViewSection>
@@ -147,7 +161,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="c2F-tP-gT8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="943" y="36"/>
+            <point key="canvasLocation" x="1092" y="37"/>
         </scene>
         <!--Menu Controller-->
         <scene sceneID="Vht-WP-xTC">
@@ -277,7 +291,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="apJ-KC-JcR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="137" y="857"/>
+            <point key="canvasLocation" x="-255" y="860"/>
         </scene>
         <!--News-->
         <scene sceneID="9ZH-I7-PAt">
@@ -360,9 +374,11 @@
                     </tableView>
                     <navigationItem key="navigationItem" title="News" id="rud-Zb-xSt">
                         <barButtonItem key="leftBarButtonItem" image="menu" id="wT9-F2-uLP"/>
+                        <barButtonItem key="rightBarButtonItem" style="plain" systemItem="rewind" id="nW9-D5-uxx"/>
                     </navigationItem>
                     <connections>
                         <outlet property="menuButton" destination="wT9-F2-uLP" id="soH-pV-nI5"/>
+                        <outlet property="menuLateralButton" destination="nW9-D5-uxx" id="rbQ-NS-3Fm"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Poj-hI-kZJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -502,4 +518,7 @@
         <image name="photo" width="1024" height="1024"/>
         <image name="tag" width="1024" height="1024"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="nzz-0R-q5L"/>
+    </inferredMetricsTieBreakers>
 </document>
